--- a/src/Game.css
+++ b/src/Game.css
@@ -23,7 +23,6 @@ main {
 }
 
 .game {
-  border: 1px solid #000;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -42,4 +41,16 @@ h1 {
   flex-grow: 0;
   padding: 4px;
   margin: 8px;
+}
+
+.hot {
+  background-color: rgba(255,0,0,.5);
+}
+
+.cold {
+  background-color: rgba(0,0,255,.5);
+}
+
+.win {
+  background-color: rgb(0,255,0);
 }
